@@ -2,7 +2,7 @@
 
 echo "check JAVA_HOME & java"
 JAVA_CMD="$2"/bin/java
-MAIN_CLASS=com.actiontech.dble.config.loader.ucoreprocess.XmltoUcore
+MAIN_CLASS=com.actiontech.dble.cluster.xmltoKv.XmltoCluster
 if [ ! -n "$2" ]; then
     JAVA_CMD=$JAVA_HOME/bin/java
     if [ ! -d "$JAVA_HOME" ]; then
@@ -21,5 +21,11 @@ if [ ! -n "$1" ]; then
     DBLE_HOME=`pwd`
 fi
 cd $CURR_DIR
-$JAVA_CMD -Xms256M -Xmx1G -XX:MaxPermSize=64M  -DDBLE_HOME=$DBLE_HOME -cp "$DBLE_HOME/conf:$DBLE_HOME/lib/*" $MAIN_CLASS
-echo "---------finished------------"
+$JAVA_CMD -Xms256M -Xmx1G  -DDBLE_HOME=$DBLE_HOME -cp "$DBLE_HOME/conf:$DBLE_HOME/lib/*" $MAIN_CLASS
+if [ $? -eq 0 ]; then
+    echo "--------finish with success -------"
+    exit 0
+  else
+    echo "--------finish with error---------"
+    exit 1
+fi
